--- a/frontend/package.json
+++ b/frontend/package.json
@@ -16,15 +16,15 @@
     "dotenv": "^16.4.7",
     "font-awesome": "^4.7.0",
     "pretendard": "^1.3.9",
-    "react": "^18.3.1",
-    "react-dom": "^18.3.1",
+    "react": "^19.0.0",
+    "react-dom": "^19.0.0",
     "react-icons": "^5.4.0",
     "react-redux": "^9.2.0",
-    "react-router-dom": "^6.28.2",
-    "react-scripts": "^3.0.1",
+    "react-router-dom": "^7.1.3",
+    "react-scripts": "5.0.1",
     "redux": "^5.0.1",
     "styled-components": "^6.1.14",
-    "typescript": "^4.8.4",
+    "typescript": "^4.4.2",
     "web-vitals": "^2.1.0"
   },
   "scripts": {
@@ -50,9 +50,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "resolutions": {
-    "**/@typescript-eslint/eslint-plugin": "^4.1.1",
-    "**/@typescript-eslint/parser": "^4.1.1"
   }
 }
