--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "serve": "nodemon backend/index.js",
     "start": "node backend/index.js",
-    "build": "yarn install && yarn --cwd frontend build"
+    "build": "yarn --cwd frontend install && yarn --cwd frontend build"
   },
   "dependencies": {
     "dotenv": "^16.4.7"
