--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "license": "MIT",
   "scripts": {
     "serve": "nodemon backend/index.js",
-    "start": "node backend/index.js",
+    "start": "yarn --cwd backend install && node backend/index.js",
     "build": "yarn --cwd frontend install && yarn --cwd frontend build"
   },
   "dependencies": {
