--- a/frontend/package.json
+++ b/frontend/package.json
@@ -51,5 +51,7 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  }
+  },
+  "proxy": "http://Jjolab-env3.eba-qqth2vcp.ap-northeast-2.elasticbeanstalk.com/",
+  "homepage": "http://Jjolab-env3.eba-qqth2vcp.ap-northeast-2.elasticbeanstalk.com/"
 }
