--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,7 +26,8 @@
     "redux": "^5.0.1",
     "styled-components": "^6.1.14",
     "typescript": "^4.4.2",
-    "web-vitals": "^2.1.0"
+    "web-vitals": "^2.1.0",
+    "webpack-dev-server": "^5.2.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -52,6 +53,7 @@
       "last 1 safari version"
     ]
   },
-  "proxy": "http://Jjolab-env3.eba-qqth2vcp.ap-northeast-2.elasticbeanstalk.com/",
-  "homepage": "http://Jjolab-env3.eba-qqth2vcp.ap-northeast-2.elasticbeanstalk.com/"
+  "devServer": {
+    "allowedHosts": "all"
+  }
 }
