--- a/frontend/package.json
+++ b/frontend/package.json
@@ -56,6 +56,6 @@
   "devServer": {
     "allowedHosts": "all"
   },
-  "proxy": "https://Jjolab-env4.eba-qqth2vcp.ap-northeast-2.elasticbeanstalk.com/",
-  "homepage": "https://Jjolab-env4.eba-qqth2vcp.ap-northeast-2.elasticbeanstalk.com/"
+  "proxy": "https://Jjolab3-env.eba-y5npdhqe.ap-northeast-2.elasticbeanstalk.com/",
+  "homepage": "https://Jjolab3-env.eba-y5npdhqe.ap-northeast-2.elasticbeanstalk.com/"
 }
